@@ -776,7 +776,8 @@ else {
 		}
 
 		if (count($nodes) == 1) {
-			$sql = $id_name.' BETWEEN '.$nodes[0].'00000000000000 AND '.$nodes[0].'99999999999999';
+			$nodeid = reset($nodes);
+			$sql = $id_name.' BETWEEN '.$nodeid.'00000000000000 AND '.$nodeid.'99999999999999';
 		}
 		else {
 			$sql = '';
